v0.1.8

v0.1.7 (2012/08/24)
  Bugs fixed
    * Fix bug with '<' in the Erb parser !
    * Assignments can now be any valid Puppet expression.
    * Proper list of metaparameters.
  New features
    * Quick resolution of boolean conditions.
    * Start of the move to a real PCRE library.
    * Function is_domain_name.
    * New native types : zone_record, cron, exec, group, host, mount, file.

v0.1.6 (2012/08/01)
  New features
    * Errors now print a stack trace (only works with profiling builds).
    * Nested classes.
    * generate() function.
    * defines with spurious top level statements now should work.
    * validate_* functions from puppetlabs/stdlib.
  Bugs fixed
    * Metaparameters now include stages (not handled).
    * Resolving non empty arrays as boolean returns true.
    * Duplicate parameters are now detected.

v0.1.5 (2012/07/06)
  Bugs fixed
    * Detection of spurious parameters when declaring parametrized classes now
    works.
    * Resource overrides with non trivial names should now work.
    * Require statements in required files would not be loaded.

v0.1.4 (2012/07/02)
  New features
    * Basic native template function.
    * Added anchor as a native type for now. A better fix will be to just parse
      for defined types in the lib directory of modules.
    * Tentative defined() implementation. Will not work for resource references.
    * Functions md5, sha1, lowcase, upcase, split.
  Bugs fixed
    * String comparison is not case insensitive.
    * Variable scope for inherited classes should now work.
    * Support for the $module_name variable (probably a bit buggy).
    * Proper location of a "define not found" error.
    * Parsing bug for single quoted strings and slashes.
    * Bug where a resource name is a variable that is actually an array.
    * Array indexing.
    * Top level variables are now supported in Erb.
  Various
    * Removed the title parameter from the catalog printing functions.
    * Used hslint a bit.