@@ -1,4 +1,7 @@
 v0.1.8
+  Bugs fixed
+  New features
+    * Amending attributes with a collector.
 
 v0.1.7 (2012/08/24)
   Bugs fixed
